--- a/application.yml
+++ b/application.yml
@@ -18,7 +18,7 @@ lavalink:
     youtubePlaylistLoadLimit: 10000
     youtubeConfig:
       email: "temelcearazvan@gmail.com"
-      password: "9ipnkFVe3adCLLw"
+      password: "xwid bsyz ktkk eeuo"
 logging:
   file:
     max-history: 7
