--- a/application.yml
+++ b/application.yml
@@ -16,9 +16,12 @@ lavalink:
       soundcloud: true
       twitch: true
       vimeo: true
-      youtube: true
+      youtube: false
     youtubePlaylistLoadLimit: 100
     youtubeSearchEnabled: true
+    youtubeConfig:
+      email: "temelcearazvan@gmail.com"
+      password: "ydwi zakl iyau mfjg"
 logging:
   file:
     path: ./logs/
@@ -45,13 +48,13 @@ plugins:
     allowDirectVideoIds: true
     allowSearch: true
     clients:
-      - MUSIC
-      - WEB
-      - ANDROID_TESTSUITE
-      - TVHTML5EMBEDDED
-      - ANDROID_LITE
-      - MEDIA_CONNECT
-      - IOS
+    - MUSIC
+    - WEB
+    - ANDROID_TESTSUITE
+    - TVHTML5EMBEDDED
+    - ANDROID_LITE
+    - MEDIA_CONNECT
+    - IOS
     enabled: true
 sentry:
   dsn: ''
